# ilyasov33

skypro_lesson_33/: Dockerfile  README.md  pyproject.toml
skypro_lesson_33/core/: models.py
skypro_lesson_33/core/migrations/: 0001_initial.py
skypro_lesson_33/doc/: 33_2.md
skypro_lesson_33/todolist/: settings.py
